# QuCircuit

./: .gitignore  Cargo.toml  Graphs.nb  LocalCliffordGroup.nb  base_cfg.json  data.txt  phase_detection.ipynb  plot_entropy.ipynb  plot_entropy.py  test_cfg.json  trace.py
configs/: base.json  base_graph.json  base_short.json  base_small.json  base_small_graph.json  fig2_1.json  fig2_2.json  fig2_3.json  fluctuation.json  fluctuations.json  fluctuations_small.json  other.json  other_graph.json  other_small.json  other_small_graph.json  test.json  test1_small.json  test2_small.json  test_chp.json  test_graph.json  timeseries.json  timeseries_small.json  transition.json
configs/generate_states/: test.json
configs/random_clifford/: base.json  base_small.json  fig2_1.json  fig2_2.json  fig2_3.json  fluctuations.json  timeseries.json  timeseries_small.json  transition.json
lookup_tables/: clifford_group.py  clifford_table.py  cz_lookup.py  gate_decomps.py  matrix_decomp.py
src/: benchmarks.rs  brickwall_run.rs  compute_entropy.rs  dataframe.rs  entropy_config.rs  lib.rs  main.rs  quantum_chp_state.rs  quantum_graph_state.rs  quantum_state.rs  quantum_vector_state.rs  state_config.rs  tests.rs  util.rs
test/: graph_state.py  qubit_vertex.py
